--- a/src/main/resources/estilos/main.css
+++ b/src/main/resources/estilos/main.css
@@ -6,7 +6,7 @@
     -fx-background-repeat: no-repeat;
     -fx-background-position: center, bottom right;
  /*   -fx-background-image: url('https://media4.giphy.com/media/SY8asU9xWlmgFolmSs/200w.gif?cid=6c09b952rpwoporjjjd7bm5rn0xeisozkv2dm2j3pu9hz06p&ep=v1_gifs_search&rid=200w.gif&ct=g'), url('https://cdn.pixabay.com/animation/2023/03/10/19/54/19-54-45-121_512.gif') ;*/
-    -fx-background-image: url('https://44.media.tumblr.com/15577b05b669dff2e28353393dc47682/90edf610cf6a2dc5-3c/s540x810_f1/40e0467d6eeb569bee04c9bed007be601f68312e.gif'), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIKOjE5HnREFGC02ILArlH1u2Ow692Nv7Qkw&usqp=CAU');
+    -fx-background-image: url('https://gruporeforma.reforma.com/graficohtml5/interfase/gifs_animados/images/intro_KeyboardCat.gif'), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIKOjE5HnREFGC02ILArlH1u2Ow692Nv7Qkw&usqp=CAU');
 }
 
 .menu-bar{
