--- a/src/main/resources/estilos/memorama.css
+++ b/src/main/resources/estilos/memorama.css
@@ -7,58 +7,46 @@
     -fx-padding: 8px;
 }
 
-/* Estilo para el contenedor HBox */
 .hbox {
-    -fx-spacing: 10px; /* Espaciado entre elementos hijos */
-    -fx-padding: 10px; /* Espaciado interno */
+    -fx-spacing: 10px;
+    -fx-padding: 10px;
 }
 
-/* Estilo para el contenedor VBox */
 .vbox {
-    -fx-spacing: 10px; /* Espaciado entre elementos hijos */
-    -fx-padding: 10px; /* Espaciado interno */
+    -fx-spacing: 10px;
+    -fx-padding: 10px;
 }
 
-/* Estilo para el contenedor GridPane */
 .grid-pane {
-    -fx-hgap: 10px; /* Espacio horizontal entre celdas */
-    -fx-vgap: 10px; /* Espacio vertical entre celdas */
+    -fx-hgap: 10px;
+    -fx-vgap: 10px;
     -fx-border-color: black;
+    -fx-background-color:  #fff;
 }
 
-/* Estilo para la etiqueta */
 .label {
-    -fx-font-size: 20px; /* Tamaño de la fuente */
-    -fx-padding: 10px; /* Espaciado interno */
-    -fx-spacing: 10px; /* Espaciado externo */
-}
-
-/* Estilo para la etiqueta de información */
-.lbl-info {
-    -fx-font-size: 16px;
-    -fx-text-fill: #333333;
-}
-
-/* Estilo para las etiquetas de puntuación */
-.lbl-success {
-    -fx-background-color: #28a745;
-    -fx-text-fill: white;
     -fx-font-size: 20px;
-    -fx-padding: 5px;
-    -fx-border-radius: 5px;
+    -fx-padding: 10px;
+    -fx-spacing: 10px;
+}
+
+.text-field {
+    -fx-font-size: 14px;
+    -fx-padding: 10px;
+    -fx-spacing: 10px;
+}
+
+.root {
+    -fx-background-color: #e4cdef;
+    -fx-background-image: url('https://cdn.pixabay.com/photo/2021/09/13/21/06/floral-background-6622475_1280.png');
+}
+
+.lbl-success {
+    -fx-background-color: green;
+    -fx-text-fill: white;
 }
 
 .lbl-danger {
-    -fx-background-color: #dc3545;
+    -fx-background-color: red;
     -fx-text-fill: white;
-    -fx-font-size: 20px;
-    -fx-padding: 5px;
-    -fx-border-radius: 5px;
-}
-
-/* Estilo para el cuadro de texto */
-.text-field {
-    -fx-font-size: 14px; /* Tamaño de la fuente */
-    -fx-padding: 10px; /* Espaciado interno */
-    -fx-spacing: 10px
 }
